# fifa-country-ranking

./: .flake8  .gitignore  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
cmd/: environment_setup.bat  environment_setup.sh  run.bat  run_all.sh
data/: README.md  extract_data.py  extract_external_metadata.py  process_data.py  refine_data.py  run_data_pipeline.bat  run_data_pipeline.sh
logs/: set_logger.py
ml_model/: train_model.py
ml_model/utils/: model_extensions.py
ml_model_scripts/: architecture_loader.py  generate_fifa_ranking.py  run_model_training.bat  run_model_training.sh  train_model.py
ml_model_scripts/utils/: model_extensions.py
