[project]
name = "fifa-country-ranking"
version = "0.1.0"
description = "A Transformer-based ML model to predict FIFA rankings. It uses a bottom-up approach, weighting player attributes based on league difficulty derived from continental tournament data."
readme = "README.md"
requires-python = ">=3.14"
[tool.black]
line-length = 96
[flake8]
max-line-length = 96
extend-ignore = E203
dependencies = [
    "keras>=3.14.1",
    "soccerdata>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
